refactor: change name package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "slidedown-details-json",
+  "name": "slidedown-details",
   "version": "1.0.0",
   "private": true,
   "description": "A animate tag <details> as slidedown",
