fix: package.json

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "A animate tag <details> as slidedown",
   "keywords": [
     "slidedown",
-    "details",
+    "details"
   ],
   "homepage": "https://github.com/dev-orisma/slidedown-details/#readme",
   "bugs": {
