--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "slidedown-details",
   "version": "1.0.0",
-  "private": true,
+  "private": false,
   "description": "A animate tag <details> as slidedown",
   "keywords": [
     "slidedown",
